Huevos Muller change

--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
                 <li class="li_nav">Categorias</li>
                 <li class="li_nav">Login</li>
                 <li class="li_nav">Registro</li>
+
             </ul>
         </section>
     </nav>
     <!-- NAVBAR -->
 
     <!-- HOME -->
-<section><h1>Rectas Huevo Muller</h1></section>
+<section><h1>Rectas Huevo Kelman</h1></section>
 
 <section>
     <article>
