--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- NAVBAR -->
 
     <!-- HOME -->
-<section><h1>Rectas Huevo Kelman</h1></section>
+<section><h1>Rectas Huevo Lauti</h1></section>
 
 <section>
     <article>
