--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
         <section>
             <ul class="ul_nav">
                 <li class="li_nav">
-                    <form action=""><input type="text" name="buscador" id=""
-                            placeholder="Ingrese pagina a la que le gustaría ir"></form>
+                    <form action=""><input type="text" name="buscador" class="buscarInput" id=""
+                            placeholder="Ingrese pagina a la que le gustaría ir" method = "GET"></form>
+                            <button>Buscar</button>
                 </li>
                 <li class="li_nav">home</li>
                 <li class="li_nav">Categorias</li>
@@ -30,13 +31,8 @@
     <!-- HOME -->
 <section><h1>Rectas Huevo Lauti</h1></section>
 
-<section>
-    <article>
-        <div class="card"><img src="" alt="fotoReceta"><h3>titulo</h3><p>dificultad: </p><h5>link</h5></div>
-    </article>
-    <article>
-        <div class="card"><img src="" alt="fotoReceta"><h3>titulo</h3><p>dificultad: </p><h5>link</h5></div>
-    </article>
+<section class="card_article">
+    
 </section>
 
 <button type="button">Agregar más</button>
@@ -51,6 +47,7 @@
         </ul>
     </footer>
     <!-- FOOTER -->
+    <script src="js/index.js"></script>
 </body>
 
 </html>
