Avanzando, llamada por discord

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOME-TP</title>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
@@ -35,7 +36,7 @@
     
 </section>
 
-<button type="button">Agregar más</button>
+<button type="button" class="botonAgregar">Agregar más</button>
 
 
     <!-- HOME -->
