--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOME-TP</title>
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -15,7 +18,7 @@
         <section>
             <ul class="ul_nav">
                 <li class="li_nav">
-                    <form action=""><input type="text" name="buscador" class="buscarInput" id=""
+                    <form action="" class="formNav"><input type="text" name="buscador" class="buscarInput" id=""
                             placeholder="Ingrese pagina a la que le gustaría ir" method = "GET"></form>
                             <button>Buscar</button>
                 </li>
@@ -30,14 +33,14 @@
     <!-- NAVBAR -->
 
     <!-- HOME -->
-<section><h1>Rectas Huevo Lauti</h1></section>
+<section><h1 class="titleIndex">Rectas Huevo Lauti</h1></section>
 
 <section class="card_article">
     
 </section>
-
+<div class="buttonConocer">
 <button type="button" class="botonAgregar">Agregar más</button>
-
+</div>
 
     <!-- HOME -->
 
