--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- NAVBAR -->
 
     <!-- HOME -->
-<section><h1 class="titleIndex">Rectas Huevo Lauti</h1></section>
+<section><h1 class="titleIndex">Rectas Lauti</h1></section>
 
 <section class="card_article">
     
