detalle.html functional

--- a/detalle.html
+++ b/detalle.html
@@ -6,6 +6,8 @@
     <title>Detalle</title>
 </head>
 <body>
-    
+    <div class="informacion"></div>
+    <h1></h1>
+    <script src="./js/detalle.js"></script>
 </body>
 </html>
