Avances detalle.hrml

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                             placeholder="Ingrese pagina a la que le gustaría ir" method = "GET"></form>
                             <button>Buscar</button>
                 </li>
-                <li class="li_nav">home</li>
+                <li class="li_nav"> <a href="/index.html">Home</a></li>
                 <li class="li_nav">Categorias</li>
                 <li class="li_nav">Login</li>
                 <li class="li_nav">Registro</li>
