--- a/detalle.html
+++ b/detalle.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalle</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
+
 <body>
     <div class="informacion"></div>
-    <h1></h1>
+    <section class="ingredientes_instrucciones">
+        <article class="ingredientes">
+            <h3>Ingredientes</h3>
+            <ul class="ulIngredientes"></ul>
+        </article>
+        <article class="instrucciones">
+            <h3>Instrucciones</h3>
+            <ul class="ulPasos"></ul>
+        </article>
+        <div class="categorias">
+         <h3>Categorias</h3>   
+        </div>
+    </section>
     <script src="./js/detalle.js"></script>
 </body>
+
 </html>
