Agregado de login js

--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 
     <script src="./js/login.js"></script>
     
-    <div class="login">
+    <div class="log">
         <form id="loginfFormulario">
         <h2>Iniciar sesion</h2>
         <label for="email">Email:</label>
