Agregado de detalles de styles

--- a/login.html
+++ b/login.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="./css/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
 </head>
-<body>
+<body class="body_login">
 
     <script src="./js/login.js"></script>
     
     <div class="log">
         <form id="loginfFormulario">
-        <h2>Iniciar sesion</h2>
+        <h2 class="sesion_login">Iniciar sesion</h2>
         <label for="email">Email:</label>
         <input type="emial" id="email" name="email">
 
