CSS mejorado, mejoras index.js

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </li>
                 <li class="li_nav"> <a href="index.html">Home</a></li>
                 <li class="li_nav">Categorias</li>
-                <li class="li_nav">Login</li>
+                <li class="li_nav"> <a href="/login.html">Login</a></li>
                 <li class="li_nav">Registro</li>
 
             </ul>
