--- a/registro.html
+++ b/registro.html
@@ -1,32 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-
-    <script src="./js/registro.js"></script>
-
-    <div class="Registro">  
-        <form id="registroForm">
-            <h2>Registro</h2>
-            <label for="email">Email: </label>
-            <input type="email" name="email" id="email">
-
-            <label for="contraseña">Contraseña:</label>
-            <input type="contraseña" name="contraseña" id="contraseña">
-
-            <label>
-                <input type="checkbox" id="terminos" name="terminos">
-                Acepto los <a href="">Terminos y condiciones</a>
-            </label>
-
-            <button type="submit">Resgistrar</button>
-            <p><a href="login.html">Ya tengo una cuenta</a></p>
+    <header>
+        <h1>Formulario de Registro</h1>
+    </header>
+    <main>
+        <form id="register-form" class="center-form">
+            <div>
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" placeholder="Ingrese su email">
+                <p id="email-error" class="error-message"></p>
+            </div>
+            <div>
+                <label for="password">Contraseña:</label>
+                <input type="password" id="password" name="password" placeholder="Ingrese su contraseña">
+                <p id="password-error" class="error-message"></p>
+            </div>
+            <div>
+                <label>
+                    <input type="checkbox" id="terms"> Acepto los Términos y Condiciones
+                </label>
+                <p id="terms-error" class="error-message"></p>
+            </div>
+            <div>
+                <button type="submit">Registrarse</button>
+            </div>
+            <p>¿Ya tenes una cuenta? <a href="login.html">Inicia sesión aquí</a></p>
         </form>
-    </div>
-    
+    </main>
+    <footer>
+        <p>Proyecto Integrador - Equipo 6</p>
+    </footer>
+    <script src="js/registro.js"></script>
 </body>
 </html>
