--- a/registro.html
+++ b/registro.html
@@ -45,7 +45,7 @@
                 <button type="submit">Registrarse</button>
             </div>
 
-            <p>¿Ya tienes una cuenta? <a href="login.html">Inicia sesión aquí</a></p>
+            <p>¿Ya tenes una cuenta? <a href="login.html">Inicia sesión aquí</a></p>
         </form>
     </main>
 
