--- a/login.html
+++ b/login.html
@@ -8,22 +8,22 @@
 </head>
 <body class="body_login">
 
-   
+    <script src="./js/login.js"></script>
     
     <div class="log">
-        <form action="./index.html" method="get" id="loginfFormulario" class="formLogin">
-            <h2 class="sesion_login">Iniciar sesion</h2>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" placeholder="Escribe tu email">
+        <form id="loginfFormulario">
+        <h2 class="sesion_login">Iniciar sesion</h2>
+        <label for="email">Email:</label>
+        <input type="emial" id="email" name="email">
 
 
-            <label for="contraseña">Contraseña:</label>
-            <input type="contraseña" name="contraseña" id="contraseña" placeholder="Escribe tu contraseña">
-            <button type="submit">Inciciar sesion</button>
+        <label for="contraseña">Contraseña:</label>
+        <input type="contraseña" name="contraseña" id="contraseña">
+        <button type="submit">Inciciar sesion</button>
 
-            
+        <p><a href=""></a></p>
         </form>
     </div>
-    <script src="./js/login.js"></script>
+    <script src="/js/login.js"></script>
 </body>
 </html>
