--- a/registro.html
+++ b/registro.html
@@ -9,7 +9,7 @@
 
     <script src="./js/registro.js"></script>
 
-    <div class="Registro">  
+    < class="Registro">  
         <form id="registroForm">
             <h2>Registro</h2>
             <label for="email">Email: </label>
@@ -26,7 +26,7 @@
             <button type="submit">Resgistrar</button>
             <p><a href="login.html">Ya tengo una cuenta</a></p>
         </form>
-    </div>
+    
     
 </body>
 </html>
