--- a/index.html
+++ b/index.html
@@ -14,14 +14,16 @@
 <body>
 
     <!-- NAVBAR -->
+     <head>
     <nav>
         <section>
             <ul class="ul_nav">
-                <li class="li_nav">
+             
+                <div class="buscador">
                     <form action="" class="formNav"><input type="text" name="buscador" class="buscarInput" id=""
-                            placeholder="Ingrese pagina a la que le gustaría ir" method = "GET"></form>
-                            <button>Buscar</button>
-                </li>
+                        placeholder="Ingrese pagina a la que le gustaría ir" method = "GET"></form>
+                        <button>Buscar</button>
+                    </div>
                 <li class="li_nav"> <a href="index.html">Home</a></li>
                 <li class="li_nav">Categorias</li>
                 <li class="li_nav"> <a href="/login.html">Login</a></li>
@@ -30,6 +32,8 @@
             </ul>
         </section>
     </nav>
+   
+</head>
     <!-- NAVBAR -->
 
     <!-- HOME -->
