Cambio detalle HTML Login

--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
         <form action="./index.html" method="get" id="loginfFormulario" class="formLogin">
             <h2 class="sesion_login">Iniciar sesion</h2>
             <label for="email">Email:</label>
-            <input type="email" id="email" name="email" placeholder="Escribe tu email" required>
+            <input type="email" id="email" name="email" placeholder="Escribe tu email" >
 
 
             <label for="contraseña">Contraseña:</label>
