Agregado de JS de Registro

--- a/registro.html
+++ b/registro.html
@@ -14,10 +14,10 @@
         <form id="registroForm">
             <h2 class="rtitulo">Registro</h2>
             <label for="email">Email: </label>
-            <input type="email" name="email" id="email">
+            <input type="email" name="email" id="email" required>
 
             <label for="contraseña">Contraseña:</label>
-            <input type="contraseña" name="contraseña" id="contraseña">
+            <input type="contraseña" name="contraseña" id="contraseña" required>
 
             <label>
                 <input type="checkbox" id="terminos" name="terminos">
