--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
 
             <label for="contraseña">Contraseña:</label>
             <input type="contraseña" name="contraseña" id="contraseña" placeholder="Escribe tu contraseña">
-            <button type="submit">Inciciar sesion</button>
+            <button class="buttonLogin"action= "submit">Inciciar sesion</button>
 
             
         </form>
