--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     </div>
                 <li class="li_nav"> <a href="index.html">Home</a></li>
                 <li class="li_nav">Categorias</li>
-                <li class="li_nav"> <a href="/login.html">Login</a></li>
+                <li class="li_nav"> <a href="login.html">Login</a></li>
                 <li class="li_nav">Registro</li>
 
             </ul>
