--- a/category.html
+++ b/category.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Category</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <div class="categoriaBody"></div>
-    <script src="/js/category.js"></script>
+    <div class="h1Category"></div>
+    <div class="categoryBody">
+    </div>
+    <script src="./js/category.js"></script>
 </body>
 </html>
