Llamada discord cerrando TP

--- a/categories.html
+++ b/categories.html
@@ -7,6 +7,9 @@
     <title>Categories</title>
 </head>
 <body>
-    
+    <h1 class="h1Categories">Categorias</h1>
+    <div class ="categoriesBody"></div>
+
+    <script src="./js/categories.js"></script>
 </body>
 </html>
