Falta solo acomodar algo del CSS y buscador del nav

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ul class="ul_nav">
              
                 <div class="buscador">
-                    <form action="" class="formNav"><input type="text" name="buscador" class="buscarInput" id=""
+                    <form action="" class="formNav"><input class= "searchForm"type="text" name="buscador" class="buscarInput" id=""
                         placeholder="Ingrese pagina a la que le gustaría ir" method = "GET"></form>
                         <button>Buscar</button>
                     </div>
