Falta solo acomodar algo del CSS y buscador del nav

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                         <button>Buscar</button>
                     </div>
                 <li class="li_nav"> <a href="index.html">Home</a></li>
-                <li class="li_nav">Categorias</li>
+                <li class="li_nav"><a href="categories.html">Categorias</a></li>
                 <li class="li_nav"> <a href="login.html">Login</a></li>
-                <li class="li_nav">Registro</li>
+                <li class="li_nav"><a href="registro.html">Registro</a></li>
 
             </ul>
         </section>
