--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <!-- NAVBAR -->
-     <head>
+     <header>
     <nav>
         <section>
             <div class="imgHeader">  <img src="./img/TPProg1Logo.webp"></div>
@@ -22,9 +22,9 @@
             <ul class="ul_nav">
              
                 <div class="buscador">
-                    <form action="" class="formNav"><input class= "searchForm"type="text" name="buscador" class="buscarInput" id=""
+                    <form action="search-results.html" class="formNav"><input class= "searchForm"type="search" name="search" class="buscarInput" id=""
                         placeholder="Ingrese pagina a la que le gustaría ir" method = "GET"></form>
-                        <button>Buscar</button>
+                        <button type="submit">Buscar</button>
                     </div>
                 <li class="li_nav"> <a href="index.html">Home</a></li>
                 <li class="li_nav"><a href="categories.html">Categorias</a></li>
@@ -35,7 +35,7 @@
         </section>
     </nav>
    
-</head>
+</header>
     <!-- NAVBAR -->
 
     <!-- HOME -->
