--- a/category.html
+++ b/category.html
@@ -15,9 +15,10 @@
                 <ul class="ul_nav">
                  
                     <div class="buscador">
-                        <form action="search-results.html" class="formNav"><input class= "searchForm"type="search" name="search" class="buscarInput" id=""
-                            placeholder="Ingrese pagina a la que le gustaría ir" method = "GET"></form>
+                        <form action="search-results.html" method = "GET" class="formNav"><input class= "searchForm"type="search" name="search" class="buscarInput" id=""
+                            placeholder="Ingrese pagina a la que le gustaría ir" >
                             <button type="submit">Buscar</button>
+                        </form>
                         </div>
                     <li class="li_nav"> <a href="index.html">Home</a></li>
                     <li class="li_nav"><a href="categories.html">Categorias</a></li>
