--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
     <footer class="footer">
         <ul class="ul_footer">
             <li class="li_footer">Matias Kelman</li>
+            <li class="li_footer">Simon Bertran</li>
+            <li class="li_footer">Rafael Muller</li>
         </ul>
     </footer>
     <!-- FOOTER -->
