rafa correccion CSS

--- a/registro.html
+++ b/registro.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
 </head>
-<body class="body_registro">
+<div class="body_registro">
     <header>
         <nav>
             <section>
@@ -31,7 +31,7 @@
        
     </header>
     
-
+    <div class="body_registro">
     <div class="Registro">
         <form id="registroForm">
             <h2 class="rtitulo">Registro</h2>
@@ -51,5 +51,6 @@
         </form>
     </div>
     <script src="./js/registro.js"></script>
-</body>
+</div>
+</div>
 </html>
