--- a/search-results.html
+++ b/search-results.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Resultado Busqueda</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -31,7 +31,7 @@
        
     </header>
     <main>
-        <section class="seccion-buscar">
+        <section class="seccion_buscar">
 
         </section>
     </main>
