--- a/search-results.html
+++ b/search-results.html
@@ -31,7 +31,7 @@
        
     </header>
     <main>
-        <section class="seccion_buscar">
+        <section class="card_article">
 
         </section>
     </main>
