--- a/categories.html
+++ b/categories.html
@@ -36,7 +36,15 @@
     </header>
     <h1 class="h1Categories">Categorias</h1>
     <div class ="categoriesBody"></div>
-
+   <!-- FOOTER -->
+   <footer class="footer">
+    <ul class="ul_footer">
+        <li class="li_footer">Matias Kelman</li>
+        <li class="li_footer">Simon Bertran</li>
+        <li class="li_footer">Rafael Muller</li>
+    </ul>
+</footer>
+<!-- FOOTER -->
     <script src="./js/categories.js"></script>
 </body>
 </html>
