--- a/category.html
+++ b/category.html
@@ -33,6 +33,15 @@
     <div class="h1Category"></div>
     <div class="categoryBody">
     </div>
+       <!-- FOOTER -->
+       <footer class="footer">
+        <ul class="ul_footer">
+            <li class="li_footer">Matias Kelman</li>
+            <li class="li_footer">Simon Bertran</li>
+            <li class="li_footer">Rafael Muller</li>
+        </ul>
+    </footer>
+    <!-- FOOTER -->
     <script src="./js/category.js"></script>
 </body>
 </html>
