--- a/login.html
+++ b/login.html
@@ -46,6 +46,15 @@
             
         </form>
     </div>
+       <!-- FOOTER -->
+       <footer class="footer">
+        <ul class="ul_footer">
+            <li class="li_footer">Matias Kelman</li>
+            <li class="li_footer">Simon Bertran</li>
+            <li class="li_footer">Rafael Muller</li>
+        </ul>
+    </footer>
+    <!-- FOOTER -->
     <script src="./js/login.js"></script>
 </body>
 </html>
