--- a/search-results.html
+++ b/search-results.html
@@ -35,6 +35,15 @@
 
         </section>
     </main>
+       <!-- FOOTER -->
+       <footer class="footer">
+        <ul class="ul_footer">
+            <li class="li_footer">Matias Kelman</li>
+            <li class="li_footer">Simon Bertran</li>
+            <li class="li_footer">Rafael Muller</li>
+        </ul>
+    </footer>
+    <!-- FOOTER -->
     <script src="./js/search-results.js"></script>
 </body>
 </html>
