--- a/registro.html
+++ b/registro.html
@@ -49,6 +49,15 @@
             <p><a href="login.html">Ya tengo una cuenta</a></p>
         </form>
     </div>
+       <!-- FOOTER -->
+       <footer class="footer">
+        <ul class="ul_footer">
+            <li class="li_footer">Matias Kelman</li>
+            <li class="li_footer">Simon Bertran</li>
+            <li class="li_footer">Rafael Muller</li>
+        </ul>
+    </footer>
+    <!-- FOOTER -->
     <script src="./js/registro.js"></script>
 </div>
 </html>
