--- a/registro.html
+++ b/registro.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
 </head>
+<body>
+    
     <header>
         <nav>
             <section>
@@ -62,4 +64,6 @@
     </footer>
     <!-- FOOTER -->
     <script src="./js/registro.js"></script>
+    
+</body>
 </html>
